--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
-
+<div id="blurb">Just like an axolotl's remarkable ability to regenerate its limbs, this algorithmic trading platform can adapt and adjust its strategies based on market conditions, allowing it to recover and optimize performance.
+</div>
 <div class="bg">
   <svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595.3 841.9" enable-background="new 0 0 595.3 841.9" xml:space="preserve">
   
@@ -2349,3 +2350,5 @@ rbbaaqutttpqq6222mqrrbbaaqutttpqq6222mqrrbbaaqutttpqq6222mqrrbbaaqutttpqq622
 </g>
 </svg>
 </div>
+
+
